--- a/configs/model.ini
+++ b/configs/model.ini
@@ -9,13 +9,13 @@ lr_last = 0.00005
 gaussian = true
 
 [data]
-seqeunce_length = 100
+seqeunce_length = 50
 n_input_feature = 30
 n_output_feature = 6
 n_output = 12
 
 [model]
-network = TRANSFORMER
+network = GRU
 save_every = 100
 config_id = 00
 name = mob_test
@@ -31,8 +31,8 @@ kernel_size = 3
 n_channels = [64, 64, 64]
 
 [transformer]
-d_model = 36
-nhead = 3
+d_model = 144
+nhead = 6
 num_encoder_layers = 2
 num_decoder_layers = 2
 dim_feedforward = 128
