--- a/configs/model_inference.ini
+++ b/configs/model_inference.ini
@@ -5,17 +5,19 @@ lr = 0.0001
 optimizer = Adam
 betas = [0.9, 0.999]
 lr_schedule = False
+gaussian = true
 
 [data]
-seqeunce_length = 100
-n_input_feature = 24
+seqeunce_length = 50
+n_input_feature = 30
+n_output_feature = 6
 n_output = 12
 
 [model]
 network = GRU
 save_every = 100
 config_id = 00
-name = PETER_test
+name = mob_test
 hidden_size = 150
 num_layers = 1
 bias = True
@@ -26,3 +28,10 @@ bidirectional = False
 [tcn]
 kernel_size = 3
 n_channels = [64, 64, 64]
+
+[transformer]
+d_model = 36
+nhead = 3
+num_encoder_layers = 2
+num_decoder_layers = 2
+dim_feedforward = 128
